--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@babel/node": "^7.10.5",
     "@babel/preset-env": "^7.11.0",
     "@babel/register": "^7.10.5",
+    "babel-preset-env": "^1.7.0",
     "chai": "^4.2.0",
     "codecov": "^3.7.2",
     "cross-env": "^7.0.2",
